# ip-2024

guias/: guia-integrador.hs  guia3.hs  guia4.hs  guia5.hs  guia7.py  guia8.py  guias.cabal  package.yaml
guias/03/: Funciones.hs
parciales-enunciados/haskell/: parcial-alumnos.hs  parcial-campeones.hs  parcial-democracia.hs  simulacro-relaciones.hs
parciales/haskell/: 20232c.hs  20232c_1.hs  20232c_2.hs  parcial-alumnos.hs  parcial-campeones.hs  parcial-democracia.hs  simulacro-relaciones.hs  simulacro2023.hs
parciales/python/: parcial-1.py  parcial-1c-2023.py  parcial-1c-2024.py  parcial-2c-2023.py  parcial-codigos.py  parcial-escape.py  parcial2-1c-2024.py  recu-1c-2024.py  simulacro.py
testing/guia3/test/: Spec.hs
